# rust

./: README.md  clp.rs  comment.rs  doc.txt  hello.rs  main.rs  print_display.rs
async_hello/: Cargo.toml
async_hello/src/: async_tokio_hello.rs  future_poll_main.rs  future_start_main.rs  main.rs
black_hat/async_sha1_cracker/: Cargo.toml
black_hat/async_sha1_cracker/src/: main.rs
black_hat/concurent/: Cargo.toml
black_hat/concurent/src/: main.rs
black_hat/sha1_cracker/: Cargo.toml
black_hat/sha1_cracker/src/: main.rs
cli_stock/: Cargo.toml
cli_stock/src/: main.rs
cli_stock_2/: Cargo.toml  sp505_ordered.txt  sp505_short.txt  stock.csv  stock.debug
cli_stock_2/src/: main.rs
easy_config/: Cargo.toml  README.md
easy_config/src/: config_struct.rs  lib.rs  main.rs  sample_config.toml  toml_config_struct.rs
example_server_sent_events/: Cargo.toml
example_server_sent_events/src/: broadcast.rs  main.rs
handler_content/: Cargo.toml  README.md  ccc.sh  chunks.sh  fill_for_list.sh
handler_content/src/: 0_handler_content_config.toml  config.rs  content.rs  handler.rs  handler_content_toml_config_struct.rs  main.rs  util.rs
handler_old/: Cargo.toml
handler_old/src/: lib.rs  main.rs
handler_video/: Cargo.toml  README.md  fill_curl.sh  fill_jozefina.sh  fill_ruth.sh  fill_scope_curl.sh  fill_spongebob.sh  fill_video.sh  index.html  info.txt  now.sh
handler_video/examples/: 0_example_fill_config.toml  README.md  example_config.rs  example_fill_toml_config_struct.rs  lines_twenty_thousand_leagues_under_the_sea_by_jules_verne.txt  main.rs  twenty_thousand_leagues_under_the_sea_by_jules_verne.txt  util.rs
handler_video/src/: 0_handler_video_config.toml  config.rs  error.rs  handler.rs  handler_video_toml_config_struct.rs  index.html  main.rs  message.rs  status.rs  util.rs  video.rs
handler_video/static/: now.txt  timestamp.txt  ts.txt  ttt.json
influxdb_client/: Cargo.toml
influxdb_client/examples/: example_easy_config.rs  influxdb_config.toml  influxdb_toml_config_struct.rs  main.rs  read_write_verify.rs
influxdb_client/src/: call.rs  client.rs  config.rs  connect.rs  data.rs  flux_query.rs  format.rs  info.txt  lib.rs  lp.rs
lib_test/: Cargo.toml  README.md
lib_test/src/: 0_mqtt_config.toml  config.toml  example_easy_config.rs  example_influxdb_client.rs  example_mqtt_client.rs  example_mqtt_publisher.rs  influxdb_config.toml  influxdb_toml_config_struct.rs  main.rs  mqtt_config.toml  mqtt_toml_config_struct.rs  sample_config.toml  toml_mqtt_config_struct.rs
metynka/: Cargo.toml  README.md  info.txt
metynka/src/: 0_config.toml  2021_11_17_laptop_core_temperature.csv  egrep.rs  influxdb.rs  info.txt  lib.rs  main.rs  measurement.rs  settings.rs  util.rs  various.rs
metynka/src/obsolete/: file_config.rs
metynka/src/sample/: 2021_11_22_laptop_memory_float.csv  2021_11_22_laptop_temperature.csv
metynka/src/util/: file_system.rs  template_formater.rs  ts.rs
mqtt_client/: Cargo.toml  README.md
mqtt_client/mqtt_publisher/: README.md
mqtt_client/mqtt_publisher/src/: lib.rs
mqtt_client/src/: lib.rs
mqtt_publisher/: README.md
mqtt_publisher/src/: lib.rs
normalize/: Cargo.toml  README.md
normalize/src/: command_args.rs  main.rs
samples/: coin.rs  enumerate.rs  file_foookume  file_foookume.rs  ownership.rs  partial_move.rs  platform.rs  print_debug.rs  print_display.rs  string_splitter.rs  tcp.rs  tcp_connect.rs  text.rs  thread.rs  thread_complex.rs  vector.rs
ssr/: Cargo.toml
ssr/web-app-ssr/: Cargo.toml
ssr/web-app-ssr/static/: static-web-page.html
ssr/web-app-ssr/static/iter1/: index.html
ssr/web-app-ssr/static/iter2/: form.html  user.html
ssr/web-app-ssr/static/iter3/: list.html
ssr/web-app-ssr/static/iter4/: list.html
tcp_1/: Cargo.toml
tcp_1/http/src/: httprequest.rs  httpresponse.rs  lib.rs
tcp_1/httpserver/: Cargo.toml
tcp_1/httpserver/data/: orders.json
tcp_1/httpserver/public/: 404.html  health.html  index.html
tcp_1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
tcp_1/src/: main.rs
tcp_1/tcpclient/src/: main.rs
tcp_1/tcpserver/: Cargo.toml
tcp_1/tcpserver/src/: main.rs
template_formater/: Cargo.toml
template_formater/src/: lib.rs
ts/: config.toml  config.txt
ts/src/: 0_config.toml  file_config.rs  import_test.csv  lib.rs  main.rs  measurement.rs
ts/src/util/: ts.rs
various/: bitwise.rs  enum.rs  formating.rs  formating_example.rs  hash.rs  inference.rs  mutability.rs  option.rs  rectangle.rs  sample_struct.rs  testcase_list.rs
video_handler/: Cargo.toml
video_handler/src/: info.txt  lib.rs  main.rs
w_sock/: Cargo.toml
w_sock/src/: client.rs  main.rs  server.rs
w_sock_chat/: Cargo.toml
w_sock_chat/src/: main.rs  server.rs  session.rs
