[package]
#authors = ["Pavel SRB <prace@srbpavel.cz>"] 
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"] 
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"

# SYNC
#yahoo_finance_api = { version = "1.1", features = ["blocking"] }
# ASYNC
yahoo_finance_api = { version = "1.1" }

futures = "0.3"
rand = "0.8"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"] # async fn main()
