[package]
authors = ["Pavel SRB <prace@srbpavel.cz>"] 
#authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"] 

edition = "2018"

name = "manning-lp-async-rust-project-1-m1"
version = "0.1.1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

#clap = "3.0.0-beta.2"
#clap = { version = "3.0.9", features = ["derive"] } # cmd args parser
#clap = "3.0.13"
clap = { version = "3.0.13", features = ["derive"] } # cmd args parser

# SYNC
#yahoo_finance_api = { version = "1.1", features = ["blocking"] }
# ASYNC
yahoo_finance_api = { version = "1.1" }

futures = "0.3"
rand = "0.8"
async-trait = "0.1"

#tokio = { version = "1", features = ["full"] }

#async-std = { version = "1.9", features = ["unstable", "attributes"] }
[dependencies.async-std]
version = "1.10.0"
features = ["attributes", "unstable"] # attributes -> async fn main()
