[package]
name = "handler_content"
version = "0.1.0"
edition = "2021"
authors = ["Pavel SRB <prace@srbpavel.cz>"]

[dependencies]
#bytes = "1.1.0"
#actix-multipart = "0.4.0"
#futures-util = "0.3.21"
#uuid = { version = "0.8", features = ["v4"] }
#num_cpus = "1.13.1"
#actix-files = "0.6.0"
#itertools = "0.10.3"
#serde_json = "1.0.79"

[dependencies.actix-web]   
version = "4.0.1"

[dependencies.log]  
version = "0.4.14"

[dependencies.env_logger]  
version = "0.9.0"         
                           
# unpublished local crate EASY_CONFIG                                    
[dependencies.easy_config]                                           
version = "^0"                                                           
git = "https://github.com/srbpavel/rust"
package = "easy_config"

[dependencies.serde]
version = "1.0.136"                                                     
features = ["derive"]                                                    
                                                                         
### EXAMPLES
#[dev-dependencies]
#uuid = { version = "0.8", features = ["v4"] }

#[dev-dependencies.template_formater]                 
#version = "^0"                                   
#git = "https://github.com/srbpavel/rust"
#package = "template_formater"

#[dev-dependencies.async-std]
#version = "1.10.0"
#features = ["attributes", "unstable"]

#[dev-dependencies.futures]
#version = "0.3"

#[dev-dependencies.async-process]
#version = "1.3.0"

#[dependencies.actix-rt]
#version = "2.7.0"
