[package]
name = "handler_content"
version = "0.1.0"
edition = "2021"
authors = ["Pavel SRB <prace@srbpavel.cz>"]

[dependencies]
dashmap = "5.2.0"

[dependencies.futures-util]
version = "0.3.21"

[dependencies.actix-web]   
version = "4.0.1"

[dependencies.log]  
version = "0.4.14"

[dependencies.env_logger]  
version = "0.9.0"         
                           
# unpublished local crate EASY_CONFIG                                    
[dependencies.easy_config]                                           
version = "^0"                                                           
git = "https://github.com/srbpavel/rust"
package = "easy_config"

[dependencies.serde]
version = "1.0.136"                                                     
features = ["derive"]

