[package]
name = "influxdb_client"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.reqwest]
version = "0.11.9"
features = ["blocking", "json"]

# unpublish local crate                           
[dependencies.template_formater]                  
version = "^0"                                    
path = "/home/conan/soft/rust/template_formater"
