[package]
name = "influxdb_client"
version = "0.1.0"
edition = "2021"
authors = ["Pavel SRB <prace@srbpavel.cz>"]


[dependencies]
[dependencies.reqwest]
version = "0.11.9"
features = ["blocking", "json"]

# unpublish local crate                           
[dependencies.template_formater]                  
version = "^0"                                    
path = "/home/conan/soft/rust/template_formater"


# for EXAMPLES
[dev-dependencies]
csv = "1.1"
chrono = "0.4.19"

# for TOML Serialize, Deserialize
[dev-dependencies.serde]
version = "1.0.70"
features = ["derive"]

# unpublish local crate
[dev-dependencies.easy_config]
version = "^0"
path = "/home/conan/soft/rust/easy_config/"
