[package]
name = "lib_test"
version = "0.1.0"
edition = "2021"


[dependencies]


# for TOML Serialize, Deserialize 
[dependencies.serde]
version = "1.0.70"
features = ["derive"] # https://crates.io/crates/serde # https://serde.rs/derive.html


# unpublish local crate
[dependencies.easy_config]
version = "^0"
path = "/home/conan/soft/rust/easy_config/"


# unpublish local crate
[dependencies.mqtt_client]
version = "^0"
path = "/home/conan/soft/rust/mqtt_client"
