[package]
name = "lib_test"
version = "0.1.0"
edition = "2021"


[dependencies]
#serde_json = "1.0"
csv = "1.1"
chrono = "0.4.19"


# for TOML Serialize, Deserialize 
[dependencies.serde]
version = "1.0.70"
features = ["derive"] # https://crates.io/crates/serde # https://serde.rs/derive.html


# unpublish local crate
[dependencies.easy_config]
version = "^0"
path = "/home/conan/soft/rust/easy_config/"


# unpublish local crate
[dependencies.mqtt_client]
version = "^0"
path = "/home/conan/soft/rust/mqtt_client"


# unpublish local crate
[dependencies.influxdb_client]
version = "^0"
path = "/home/conan/soft/rust/influxdb_client"

[dependencies.reqwest]          
version = "0.11.9"              
features = ["blocking", "json"] 
