[package]
name = "metynka"
version = "0.1.0"
authors = ["Pavel SRB <prace@srbpavel.cz>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.70", features = ["derive"] } # https://crates.io/crates/serde # https://serde.rs/derive.html
serde_json = "1.0.59" # JSON sensors
#reqwest = "0.11.6" # insted CURL os
chrono = "0.4.19" # https://crates.io/crates/chrono # DATE_TIME
toml = "0.5.8" # https://crates.io/crates/toml # CONFIG
strfmt = "0.1.6" # FORMAT template
#derivative = "2.2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
