[package]
name = "websocket-example"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
env_logger = "0.9"
log = "0.4"
chrono = "0.4.19"
#rand = "0.8"
rand = "0.8.5"
#serde = "1"
serde = "1.0.136"
#serde_json = "1"
serde_json = "1.0.79"

#actor
actix = "0.13.0"

actix-files = "0.6.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
