[package]
name = "async_sha1_cracker"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3"


[dependencies.sha-1]
version = "0.10.0"


[dependencies.hex]
version = "0.4.3"


[dependencies.async-std]
version = "1.10.0"
features = ["attributes", "unstable"] # attributes -> async fn main()
