[package]
name = "web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.actix-web]
#version = "3"
version = "4.0.1"

[dependencies.actix-files]
#version = "0.5.0"
version = "0.6.0"

[dependencies.tera]
#version = "1.8.0"
version = "1.15.0"

[dependencies.serde]
#version = "1"
version = "1.0.136"
features = ["derive"]

[dependencies.serde_json]
#version = "1.0.64"
version = "1.0.79"

[dependencies.awc]
version = "3.0.0"


[dev-dependencies.actix-rt]
#version = "2.2.0"
version = "2.7.0"
